:sparkles: feat: Created feature list images cats and Tests

--- a/catsApp/app/build.gradle
+++ b/catsApp/app/build.gradle
@@ -117,5 +117,8 @@ dependencies {
     testAnnotationProcessor 'com.google.dagger:hilt-compiler:2.41'
 
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
 }
 
